--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -1,45 +1,101 @@
-   body {
-       font-family: 'Open Sans', sans-serif;
-   }
-   
-   .text-primary {
-       color: #FD6E0A;
-   }
-   
-   .btn-primary {
-       border-radius: 5px;
-       background: #FD6E0A;
-       border: 0;
-       color: #ffff;
-       font-size: 20px;
-       font-weight: 700;
-       padding: 18px 35px;
-   }
-   /* nav related styles */
-   
-   nav {
-       display: flex;
-       justify-content: space-around;
-       align-items: center;
-   }
-   
-   .nav-title {
-       color: #181818;
-       font-size: 45px;
-       font-weight: 800;
-   }
-   
-   nav>ul {
-       display: flex;
-       align-items: center;
-   }
-   
-   nav li {
-       list-style: none;
-       margin-right: 50px;
-   }
-   
-   nav a {
-       text-decoration: none;
-       color: var(--dark-02, #474747);
-   }
+/* komon stykesbody  */
+
+body {
+    font-family: 'Open Sans', sans-serif;
+}
+
+.text-primary {
+    color: #FD6E0A;
+}
+
+.btn-primary {
+    border-radius: 5px;
+    background: #FD6E0A;
+    border: 0;
+    color: #ffff;
+    font-size: 20px;
+    font-weight: 700;
+    padding: 18px 35px;
+}
+
+
+/* nav related styles */
+
+nav {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin: 0 200px;
+}
+
+.nav-title {
+    color: #181818;
+    font-size: 45px;
+    font-weight: 800;
+}
+
+nav>ul {
+    display: flex;
+    align-items: center;
+}
+
+nav li {
+    list-style: none;
+    margin-right: 50px;
+}
+
+nav a {
+    text-decoration: none;
+    color: var(--dark-02, #474747);
+}
+
+
+/* header related styles */
+
+.header {
+    background: #fff8f3;
+    background-image: url('../images/header_bg.png');
+    background-repeat: no-repeat;
+    background-position: bottom right;
+}
+
+.banner {
+    padding: 30px 30px 0px 150px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.banner .profile-pic {
+    width: 500px;
+    height: 600px;
+}
+
+.banner-greeting {
+    font-size: 45px;
+    color: #474747;
+    margin-bottom: 0;
+}
+
+.banner-title {
+    font-size: 85px;
+    font-weight: 700;
+    margin-top: 5px;
+    margin-bottom: 20px;
+}
+
+.banner-description {
+    color: #757575;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
+    margin-top: 20px;
+    margin-bottom: 30px;
+}
+
+.banner-content {
+    max-width: 585px;
+}
+
+
+/* main section styles */
