--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -1,4 +1,4 @@
-/* komon stykesbody  */
+/* common styles body  */
 
 body {
     font-family: 'Open Sans', sans-serif;
@@ -99,3 +99,28 @@ nav a {
 
 
 /* main section styles */
+
+
+/* about sections styles */
+
+.about {
+    padding: 130px;
+    border-radius: 10px;
+    background: #FFF8F3;
+    margin: 130px 0;
+}
+
+.section-title {
+    color: #181818;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
+}
+
+.section-descrioption {
+    color: #757575;
+    text-align: center;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
+}
