--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -100,6 +100,11 @@ nav a {
 
 /* main section styles */
 
+main {
+    max-width: 1140px;
+    margin: 0 auto;
+}
+
 
 /* about sections styles */
 
@@ -123,4 +128,13 @@ nav a {
     font-size: 18px;
     font-weight: 400;
     line-height: 30px;
+}
+
+.about-info-container {
+    display: flex;
+    justify-content: space-around;
+}
+
+.about-info {
+    text-align: center;
 }
