--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -105,6 +105,10 @@ main {
     margin: 0 auto;
 }
 
+main section {
+    margin: 130px;
+}
+
 
 /* about sections styles */
 
@@ -138,3 +142,29 @@ main {
 .about-info {
     text-align: center;
 }
+
+#what-i-do-description {
+    margin: 30px 150px;
+}
+
+
+/* what i do */
+
+.skills-container {
+    display: flex;
+    gap: 24px;
+}
+
+.skill {
+    padding: 30px;
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+}
+
+.skill-descrition {
+    color: #757575;
+}
+
+
+/* A summary of My Resume */
